<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/transaction_confirm_delivery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_confirm_delivery"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <Button
            android:text="@string/transaction_accept_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:textSize="22sp"
            android:textColor="#FFFFFF"
            android:id="@+id/b_accept"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:text="@string/transaction_decline_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRed"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:id="@+id/b_decline"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <Button
            android:text="@string/transaction_return_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_close_transaction"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:text="@string/transaction_confirm_return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_confirm_return"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <TextView
            android:text="@string/transaction_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_status"
            android:textSize="30sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/transaction_book_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/transaction_book"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:text="@string/transaction_owner_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/transaction_owner"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />

            <Button
                android:text="@string/transaction_borrower_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/transaction_borrower"
                android:gravity="left|center_vertical"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_message"
            android:ems="10"
            android:id="@+id/et_message"
            android:layout_weight="16" />

        <ImageButton
            android:id="@+id/b_send_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_send_black_24dp"
            android:layout_weight="4" />
    </LinearLayout>

</LinearLayout>