<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="6dp"
    android:weightSum="2">

    <View
        android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@id/fakeView"
                android:background="@drawable/login_name_round"
                android:ems="10"
                android:hint="@string/login_username_placeholder"
                android:padding="5dp"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/fakeView"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_password_round"
                android:ems="10"
                android:hint="@string/login_password_placeholder"
                android:padding="5dp"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/b_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/fakeView"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:background="@color/loginButton"
                android:textColor="#212121"
                android:orientation="horizontal"
                android:padding="16dp"
                android:text="@string/login_button"
                android:weightSum="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/b_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignLeft="@id/fakeView"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:background="@color/registerButton"
                android:textColor="#424242"
                android:orientation="horizontal"
                android:padding="10dp"
                android:text="@string/register_button"
                android:weightSum="2" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/et_username_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@id/fakeView"
                android:background="@drawable/login_name_round"
                android:ems="10"
                android:hint="@string/login_username_placeholder"
                android:padding="5dp"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_password_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/fakeView"
                android:layout_alignParentRight="true"
                android:background="#dfdfdf"
                android:ems="10"
                android:hint="@string/login_password_placeholder"
                android:padding="5dp"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_password_register_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/fakeView"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_password_round"
                android:ems="10"
                android:hint="@string/login_password_repeat_placeholder"
                android:padding="5dp"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp">

            <Button
                android:id="@+id/b_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/fakeView"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal"
                android:background="@color/loginButton"
                android:textColor="#212121"
                android:orientation="horizontal"
                android:padding="16dp"
                android:text="@string/register_button"
                android:weightSum="2" />

        </TableRow>


    </TableLayout>

</RelativeLayout>